samples/_failures_safe/1761299741_991c23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_320988f3.c: In function ‘main’:
./samples/SAFE/__tmp_320988f3.c:172:5: error: expected expression at end of input
  172 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_320988f3.c:172:5: error: expected declaration or statement at end of input
